Adds netwrok search dialog.

--- a/tv/src/main/res/values/strings.xml
+++ b/tv/src/main/res/values/strings.xml
@@ -39,5 +39,6 @@
     <string name="ok">OK</string>
     <string name="released">Released %1$s</string>
     <string name="videos">Videos</string>
+    <string name="search_network_title">Network Shares</string>
 
 </resources>
