Adds network searching to add source dialog.

--- a/tv/src/main/res/values/strings.xml
+++ b/tv/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="uncategorized">Uncategorized</string>
     <string name="aired">Aired %1$s</string>
     <string name="rating_description">Rated %.1f/10</string>
+    <string name="manually_enter_path">Manually Enter Path</string>
 
     <plurals name="numberOfEpisodesAvailable">
         <item quantity="one">1 Episode</item>
