Added TV show/movie recommendations
Fixes #8

Implemented a very simple recommendation service that will recommend the most recently released movie title in your collection as well as 2 TV shows that have recently aired. This is very rudimentary at this point but will be expanded in the future.

--- a/tv/src/main/res/values/strings.xml
+++ b/tv/src/main/res/values/strings.xml
@@ -48,6 +48,8 @@
     <string name="aired">Aired %1$s</string>
     <string name="rating_description">Rated %.1f/10</string>
     <string name="manually_enter_path">Manually Enter Path</string>
+    <string name="recently_released">Recently released</string>
+    <string name="recently_aired">Recently aired</string>
 
     <plurals name="numberOfEpisodesAvailable">
         <item quantity="one">1 Episode</item>
