--- a/tv/src/main/res/values/strings.xml
+++ b/tv/src/main/res/values/strings.xml
@@ -19,7 +19,12 @@
 
     <string name="browse_title">My Collection</string>
     <string name="settings">Settings</string>
+    <string name="movies_genre">Movies by Genre</string>
+    <string name="tvshows_genre">Tv Shows by Genre</string>
+    <string name="tv_shows">TV Shows</string>
+    <string name="movies">Movies</string>
     <string name="add_source">Add Source</string>
+    <string name="grid_view">Grid View</string>
     <string name="movie">Movie</string>
     <string name="loading">Downloading video content&#8230;</string>
     <string name="enter_ip_address">Enter path to network share</string>
