Added expand, customization, and Palette Text

--- a/tv/src/main/res/values/strings.xml
+++ b/tv/src/main/res/values/strings.xml
@@ -37,11 +37,17 @@
     <string name="play">Play</string>
     <string name="error">Error</string>
     <string name="ok">OK</string>
+    <string name="save">Save</string>
     <string name="muted_palette">Muted</string>
     <string name="vibrant_palette">Vibrant</string>
-    <string name="no_card">None</string>
-    <string name="single_card">One</string>
-    <string name="all_cards">All</string>
+    <string name="no_card">Nothing</string>
+    <string name="single_card">Focused Card</string>
+    <string name="all_cards">All Cards</string>
+    <string name="palette_text_lbl">Color palette text visible on:</string>
+    <string name="title_only">Title Only</string>
+    <string name="context_only">Subtitle Only</string>
+    <string name="all_card_text">All Card Text</string>
+    <string name="no_text">Nothing</string>
     <string name="type_lbl">Color strength:</string>
     <string name="visible_lbl">Color palette visible on:</string>
     <string name="released">Released %1$s</string>
