--- a/tv/src/main/res/values/strings.xml
+++ b/tv/src/main/res/values/strings.xml
@@ -83,6 +83,7 @@
 
     <string-array name="blur_type">
         <item>On</item>
+        <item>Off</item>
     </string-array>
 
     <string-array name="palette_visibility">
