Adds "Watch Trailer" option to movie detail card.

--- a/tv/src/main/res/values/strings.xml
+++ b/tv/src/main/res/values/strings.xml
@@ -98,5 +98,6 @@
     </plurals>
 
     <string name="customization">Customization</string>
+    <string name="watch_trailer">Watch Trailer</string>
 
 </resources>
